--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         }
     ],
     "require": {
-        "ntopulos/formulator": "dev-master"
+        "ntopulos/formulator": "dev-master",
+        "components/jquery": "1.9.1",
+        "components/jqueryui": "1.10.4"
     }
 }
